--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: KyberPractise
+name: KyberPractice
 version: '1.0-SNAPSHOT'
-main: dragon.me.kyberPractise.KyberPractise
+main: dragon.me.kyberPractise.KyberPractice
 api-version: '1.21'
 
 prefix: "KyberPractice"
